--- a/index.html
+++ b/index.html
@@ -6,15 +6,33 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="styling/styles.css" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins:wght@100&display=swap" rel="stylesheet">     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/7f312acdcc.js" crossorigin="anonymous"></script>
     <title>Marion Gérard</title>
   </head>
   <body>
+  <nav class="navbar sticky-top navbar-expand-md navbar-light">
+    <div class="container-fluid">
+      <span class="navbar-brand ms-3 me-5">Marion G</span>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link" href="#">My work</a>
+          <a class="nav-link" href="#">About Me</a>
+          <a class="nav-link" href="#">Contact Me</a>
+        </div>
+      </div>
+    </div>
+  </nav>
   <div class="header">
-  <h1>Marion Gérard</h1>
-  <h2>Front-end developer based in Europe</h2>
-  <a href="#">Contact Me</a>
+  <h1 class="h1-home">Marion Gérard</h1>
+  <h2 class="h2-home">Front-end developer based in Europe</h2>
+  <a class="contact-link" href="#">Contact Me</a>
   </div>
   </body>
 </html>
