--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
           <a class="nav-link" href="#">My work</a>
           <a class="nav-link" href="#">About Me</a>
           <a class="nav-link" href="#">Contact Me</a>
@@ -34,5 +34,52 @@
   <h2 class="h2-home">Front-end developer based in Europe</h2>
   <a class="contact-link" href="#">Contact Me</a>
   </div>
-  </body>
+  <br />
+  <h3 class="h3-headers-home">Projects</h3>
+  <div class="line-under-headers">________________________________________________________________________</div>
+  <div class="container mt-4">
+    <div class="row justify-content-center">
+      <div class="project-one col-5 text-center">
+        <img src="/medias/cat project.png" alt="cat project" class="images-projects img-fluid rounded">
+        <h4 class="h4-projects"><a href="#">Cats page</a></h4>
+        <p class="projects-description">
+          A page about cats made with HTML.
+        </p>
+      </div>
+      <div class="project-two col-5 text-center">
+        <img src="/medias/weather project.png" alt="weather project" class="images-projects img-fluid rounded">
+        <h4 class="h4-projects"><a href="#">Weather app</a></h4>
+        <p class="projects-description">A weather application made with HTML, CSS, Javascript and using API.</p>
+      </div>
+    </div>
+  </div>
+  <br />
+  <h3 class="h3-headers-home">Skills</h3>
+  <div class="line-under-headers">________________________________________________________________________</div>
+  <div class="wrapper-skills">
+    <div class="wrapper-logos"><img src="/medias/html-icon.png" alt="html icon" class="logos-skills img-fluid">
+      <br>HTML</div>
+    <div class="wrapper-logos"><img src="/medias/css-icon.png" alt="css icon" class="logos-skills img-fluid">
+      <br>CSS</div>
+    <div class="wrapper-logos"><img src="/medias/js-icon.png" alt="js icon" class="logos-skills img-fluid">
+      <br>Javascript</div>
+    <div class="wrapper-logos"><img src="/medias/api-icon.png" alt="api icon" class="logos-skills img-fluid">
+      <br>API</div>
+    <div class="wrapper-logos"><img src="/medias/github-icon.png" alt="github icon" class="logos-skills img-fluid">
+      <br>GitHub</div>
+    <div class="wrapper-logos"><img src="/medias/bootstrap-icon.png" alt="bootstrap icon" class="logos-skills img-fluid">
+    <br>Bootstrap</div>
+  </div>
+  <br />
+  <br />
+  <h3 class="h3-headers-home">How to contact me</h3>
+  <div class="line-under-headers">________________________________________________________________________</div>
+  <div class="wrapper-contact">
+    <div class="each-contact 
+    one"><img src="/medias/linkedin-logo.png" alt="linkedin logo" class="logos-contact img-fluid">
+      <br>LinkedIn</div>
+  <div class="each-contact"><img src="/medias/email-logo.png" alt="email logo" class="logos-contact img-fluid">
+  <br> marion.gerard.mail@gmail.com</div>
+  </div>
+</body>
 </html>
