--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins:wght@100&display=swap" rel="stylesheet">     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/7f312acdcc.js" crossorigin="anonymous"></script>
-    <title>Marion Gérard</title>
+    <title>Marion Gérard - Front-end developer</title>
   </head>
   <body>
   <nav class="navbar sticky-top navbar-expand-md navbar-light">
@@ -21,10 +21,10 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
-          <a class="nav-link" href="#">My work</a>
-          <a class="nav-link" href="#">About Me</a>
-          <a class="nav-link" href="#">Contact Me</a>
+          <a class="nav-link active" aria-current="page" href="/index.html" title="Homepage">Home</a>
+          <a class="nav-link" href="#" title="See my work">My work</a>
+          <a class="nav-link" href="#" title="Know more about me">About Me</a>
+          <a class="nav-link" href="/index.html#contact" title="Reach out to me">Contact Me</a>
         </div>
       </div>
     </div>
@@ -32,7 +32,7 @@
   <div class="header">
   <h1 class="h1-home">Marion Gérard</h1>
   <h2 class="h2-home">Front-end developer based in Europe</h2>
-  <a class="contact-link" href="#">Contact Me</a>
+  <a class="contact-link" href="/index.html#contact" title="Contact Me">Contact Me</a>
   </div>
   <br />
   <h3 class="h3-headers-home">Projects</h3>
@@ -40,16 +40,18 @@
   <div class="container mt-4">
     <div class="row justify-content-center">
       <div class="project-one col-5 text-center">
-        <img src="/medias/cat project.png" alt="cat project" class="images-projects img-fluid rounded">
-        <h4 class="h4-projects"><a href="#">Cats page</a></h4>
+        <img src="/medias/cat project.png" alt="cat project" class="images-projects img-fluid rounded" title="Cat Project">
+        <h4 class="h4-projects"><a href="#" title="See this project">Cats page</a></h4>
         <p class="projects-description">
           A page about cats made with HTML.
         </p>
       </div>
       <div class="project-two col-5 text-center">
-        <img src="/medias/weather project.png" alt="weather project" class="images-projects img-fluid rounded">
-        <h4 class="h4-projects"><a href="#">Weather app</a></h4>
-        <p class="projects-description">A weather application made with HTML, CSS, Javascript and using API.</p>
+        <img src="/medias/weather project.png" alt="weather project" class="images-projects img-fluid rounded" title="Weather App">
+        <h4 class="h4-projects"><a href="#" title="See this project">Weather app</a></h4>
+        <p class="projects-description">
+          A weather application made with HTML, CSS, Javascript and using API.
+        </p>
       </div>
     </div>
   </div>
@@ -57,29 +59,29 @@
   <h3 class="h3-headers-home">Skills</h3>
   <div class="line-under-headers">________________________________________________________________________</div>
   <div class="wrapper-skills">
-    <div class="wrapper-logos"><img src="/medias/html-icon.png" alt="html icon" class="logos-skills img-fluid">
+    <div class="wrapper-logos"><img src="/medias/html-icon.png" alt="html icon" class="logos-skills img-fluid" title="HTML">
       <br>HTML</div>
-    <div class="wrapper-logos"><img src="/medias/css-icon.png" alt="css icon" class="logos-skills img-fluid">
+    <div class="wrapper-logos"><img src="/medias/css-icon.png" alt="css icon" class="logos-skills img-fluid" title="CSS">
       <br>CSS</div>
-    <div class="wrapper-logos"><img src="/medias/js-icon.png" alt="js icon" class="logos-skills img-fluid">
+    <div class="wrapper-logos"><img src="/medias/js-icon.png" alt="js icon" class="logos-skills img-fluid" title="Javascript">
       <br>Javascript</div>
-    <div class="wrapper-logos"><img src="/medias/api-icon.png" alt="api icon" class="logos-skills img-fluid">
+    <div class="wrapper-logos"><img src="/medias/api-icon.png" alt="api icon" class="logos-skills img-fluid" title="API">
       <br>API</div>
-    <div class="wrapper-logos"><img src="/medias/github-icon.png" alt="github icon" class="logos-skills img-fluid">
+    <div class="wrapper-logos"><img src="/medias/github-icon.png" alt="github icon" class="logos-skills img-fluid" title="GitHub">
       <br>GitHub</div>
-    <div class="wrapper-logos"><img src="/medias/bootstrap-icon.png" alt="bootstrap icon" class="logos-skills img-fluid">
+    <div class="wrapper-logos"><img src="/medias/bootstrap-icon.png" alt="bootstrap icon" class="logos-skills img-fluid" title="Bootstrap">
     <br>Bootstrap</div>
   </div>
   <br />
   <br />
-  <h3 class="h3-headers-home">How to contact me</h3>
+  <h3 class="h3-headers-home" id="contact">How to contact me</h3>
   <div class="line-under-headers">________________________________________________________________________</div>
   <div class="wrapper-contact">
     <div class="each-contact 
-    one"><img src="/medias/linkedin-logo.png" alt="linkedin logo" class="logos-contact img-fluid">
+    one"><img src="/medias/linkedin-logo.png" alt="linkedin logo" class="logos-contact img-fluid" title="LinkedIn">
       <br>LinkedIn</div>
-  <div class="each-contact"><img src="/medias/email-logo.png" alt="email logo" class="logos-contact img-fluid">
-  <br> marion.gerard.mail@gmail.com</div>
+  <div class="each-contact"><img src="/medias/email-logo.png" alt="email logo" class="logos-contact img-fluid" title="Email">
+  <br><a href="mailto:marion.gerard.mail@gmail.com" title="Email to reach me">marion.gerard.mail@gmail.com</a></div>
   </div>
 </body>
 </html>
