--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </div>
       <div class="project-two col-5 text-center">
         <img src="/medias/weather project.png" alt="weather project" class="images-projects img-fluid rounded" title="Weather App">
-        <h4 class="h4-projects"><a href="#" title="See this project">Weather app</a></h4>
+        <h4 class="h4-projects"><a href="https://silly-galileo-d0e078.netlify.app/" title="See this project">Weather app</a></h4>
         <p class="projects-description">
           A weather application made with HTML, CSS, Javascript and using API.
         </p>
