--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="styling/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins:wght@100&display=swap" rel="stylesheet">     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/7f312acdcc.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins:wght@100&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <title>Marion Gérard - Front-end developer</title>
   </head>
   <body>
@@ -23,16 +23,16 @@
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="/index.html" title="Homepage">Home</a>
           <a class="nav-link" href="#" title="See my work">My work</a>
-          <a class="nav-link" href="#" title="Know more about me">About Me</a>
+          <a class="nav-link" href="/about.html" title="Know more about me">About Me</a>
           <a class="nav-link" href="/index.html#contact" title="Reach out to me">Contact Me</a>
         </div>
       </div>
     </div>
   </nav>
-  <div class="header">
+  <div class="header-home">
   <h1 class="h1-home">Marion Gérard</h1>
   <h2 class="h2-home">Front-end developer based in Europe</h2>
-  <a class="contact-link" href="/index.html#contact" title="Contact Me">Contact Me</a>
+  <a class="contact-link-home" href="/index.html#contact" title="Contact Me">Contact Me</a>
   </div>
   <br />
   <h3 class="h3-headers-home">Projects</h3>
@@ -43,14 +43,14 @@
         <img src="/medias/cat project.png" alt="cat project" class="images-projects img-fluid rounded" title="Cat Project">
         <h4 class="h4-projects"><a href="#" title="See this project">Cats page</a></h4>
         <p class="projects-description">
-          A page about cats made with HTML.
+          My very first project, a page about cats.
         </p>
       </div>
       <div class="project-two col-5 text-center">
         <img src="/medias/weather project.png" alt="weather project" class="images-projects img-fluid rounded" title="Weather App">
         <h4 class="h4-projects"><a href="https://silly-galileo-d0e078.netlify.app/" title="See this project">Weather app</a></h4>
-        <p class="projects-description">
-          A weather application made with HTML, CSS, Javascript and using API.
+        <p class="projects-description-home">
+          A weather application to know the weather wherever you are in the world.
         </p>
       </div>
     </div>
@@ -77,11 +77,14 @@
   <h3 class="h3-headers-home" id="contact">How to contact me</h3>
   <div class="line-under-headers">________________________________________________________________________</div>
   <div class="wrapper-contact">
-    <div class="each-contact 
-    one"><img src="/medias/linkedin-logo.png" alt="linkedin logo" class="logos-contact img-fluid" title="LinkedIn">
-      <br>LinkedIn</div>
-  <div class="each-contact"><img src="/medias/email-logo.png" alt="email logo" class="logos-contact img-fluid" title="Email">
-  <br><a href="mailto:marion.gerard.mail@gmail.com" title="Email to reach me">marion.gerard.mail@gmail.com</a></div>
+    <div class="each-contact one">
+    <img src="/medias/linkedin-logo.png" alt="linkedin logo" class="logos-contact img-fluid" title="LinkedIn">
+    <br>LinkedIn</div>
+    <div class="each-contact">
+    <img src="/medias/email-logo.png" alt="email logo" class="logos-contact img-fluid" title="Email">
+    <br>
+    <a href="mailto:marion.gerard.mail@gmail.com" title="Email to reach me">marion.gerard.mail@gmail.com</a>
+    </div>
   </div>
 </body>
 </html>
