--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styling/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <title>Marion Gérard - Front-end developer</title>
   </head>
@@ -22,7 +22,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="/index.html" title="Homepage">Home</a>
-          <a class="nav-link" href="#" title="See my work">My work</a>
+          <a class="nav-link" href="/work.html" title="See my work">My work</a>
           <a class="nav-link" href="/about.html" title="Know more about me">About Me</a>
           <a class="nav-link" href="/index.html#contact" title="Reach out to me">Contact Me</a>
         </div>
@@ -40,17 +40,17 @@
   <div class="container mt-4">
     <div class="row justify-content-center">
       <div class="project-one col-5 text-center">
-        <img src="/medias/cat project.png" alt="cat project" class="images-projects img-fluid rounded" title="Cat Project">
-        <h4 class="h4-projects"><a href="#" title="See this project">Cats page</a></h4>
-        <p class="projects-description">
+        <img src="/medias/cat project.png" alt="cat project" class="images-projects-home img-fluid rounded" title="Cat Project">
+        <h4 class="h4-projects"><a href="https://frosty-northcutt-7689db.netlify.app/" target="_blank" title="See this project">Cats page</a></h4>
+        <p class="projects-description-home">
           My very first project, a page about cats.
         </p>
       </div>
       <div class="project-two col-5 text-center">
-        <img src="/medias/weather project.png" alt="weather project" class="images-projects img-fluid rounded" title="Weather App">
-        <h4 class="h4-projects"><a href="https://silly-galileo-d0e078.netlify.app/" title="See this project">Weather app</a></h4>
+        <img src="/medias/weather project.png" alt="weather project" class="images-projects-home img-fluid rounded" title="Weather App">
+        <h4 class="h4-projects"><a href="https://silly-galileo-d0e078.netlify.app/" target="_blank" title="See this project">Weather app</a></h4>
         <p class="projects-description-home">
-          A weather application to know the weather wherever you are in the world.
+          A page to know the weather wherever you are in the world.
         </p>
       </div>
     </div>
