--- a/work.html
+++ b/work.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  <title>Marion Gérard - About & contact</title>
+  <title>Marion Gérard - My work</title>
 </head>
 <body>
   <nav class="navbar sticky-top navbar-expand-md navbar-light">
@@ -22,9 +22,9 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link" href="/index.html" title="Homepage">Home</a>
-          <a class="nav-link" href="/work.html" title="See my work">My work</a>
-          <a class="nav-link active" aria-current="page" href="/about.html" title="Know more about me">About Me</a>
-          <a class="nav-link" href="/about.html#contact" title="Reach out to me">Contact Me</a>
+          <a class="nav-link active" aria-current="page" href="/work.html" title="See my work">My work</a>
+          <a class="nav-link" href="/about.html" title="Know more about me">About Me</a>
+          <a class="nav-link" href="/work.html#contact" title="Reach out to me">Contact Me</a>
         </div>
       </div>
     </div>
@@ -32,24 +32,33 @@
   <div class="header-home">
     <h1 class="h1-home">About Me</h1>
     <h2 class="h2-home">Learn to know me better</h2>
-    <a class="contact-link-home" href="/about.html#contact" title="Contact Me">Contact Me</a>
+    <a class="contact-link-home" href="/work.html#contact" title="Contact Me">Contact Me</a>
   </div>
   <br />
-  <h3 class="h3-headers-home">Who is she ?</h3>
+  <h3 class="h3-headers-home">Projects</h3>
   <div class="line-under-headers">________________________________________________________________________</div>
-  <p class="paragraph-about-me">My name is Marion. I am a front-end developer from France that loves traveling and coding. I started learning to code with SheCodes back in October 2021 and fell in love with it. I also have a bachelor in Languages and Business and I speak French, English and Spanish.</p>
-  <br />
-  <h3 class="h3-headers-home" id="contact">Contacts</h3>
-  <div class="line-under-headers">________________________________________________________________________</div>
-  <div class="wrapper-contact">
-    <div class="each-contact one">
-    <img src="/medias/linkedin-logo.png" alt="linkedin logo" class="logos-contact img-fluid" title="LinkedIn">
-    <br>LinkedIn</div>
-    <div class="each-contact">
-    <img src="/medias/email-logo.png" alt="email logo" class="logos-contact img-fluid" title="Email">
-    <br>
-    <a href="mailto:marion.gerard.mail@gmail.com" title="Email to reach me">marion.gerard.mail@gmail.com</a>
+  <div class="container mt-4">
+  <div class="row justify-content-center">
+    <div class="col-6">
+      <img src="/medias/cat project.png" alt="cat project" class="img-fluid rounded" title="Cat Project">
     </div>
+    <div class="col-4">
+      <br />
+      <h4 class="h4-projects">Cat page</h4>
+      <p class="projects-description-work">A page about cats made with HTML and CSS. It was my very first project as a front-end developer.</p>
+    </div>
+  </div>
+  <br />
+  <div class="row justify-content-center">
+    <div class="col-6">
+      <img src="/medias/weather project.png" alt="weather project" class="img-fluid rounded" title="Weather App">
+    </div>
+    <div class="col-4">
+      <br />
+      <h4 class="h4-projects">Weather application</h4>
+      <p class="projects-description-work">A weather tool to know what's the weather gonna be. It's made using HTML, CSS, Bootstrap, Javascript and API.</p>
+    </div>
+  </div>
   </div>
 </body>
 </html>
