--- a/work.html
+++ b/work.html
@@ -30,8 +30,8 @@
     </div>
   </nav>
   <div class="header-home">
-    <h1 class="h1-home">About Me</h1>
-    <h2 class="h2-home">Learn to know me better</h2>
+    <h1 class="h1-home">My Work</h1>
+    <h2 class="h2-home">See what I have been up to</h2>
     <a class="contact-link-home" href="/work.html#contact" title="Contact Me">Contact Me</a>
   </div>
   <br />
