--- a/work.html
+++ b/work.html
@@ -39,26 +39,39 @@
   <div class="line-under-headers">________________________________________________________________________</div>
   <div class="container mt-4">
   <div class="row justify-content-center">
-    <div class="col-6">
+    <div class="project-image-work col-6">
       <img src="/medias/cat project.png" alt="cat project" class="img-fluid rounded" title="Cat Project">
     </div>
-    <div class="col-4">
-      <br />
-      <h4 class="h4-projects">Cat page</h4>
+    <div class="project-text-work col-4">
+      <h4 class="h4-projects work">Cat page</h4>
       <p class="projects-description-work">A page about cats made with HTML and CSS. It was my very first project as a front-end developer.</p>
+      <a class="contact-link-home work" href="https://frosty-northcutt-7689db.netlify.app/" target="_blank">Go !</a>
     </div>
   </div>
   <br />
   <div class="row justify-content-center">
-    <div class="col-6">
+    <div class="project-image-work col-6">
       <img src="/medias/weather project.png" alt="weather project" class="img-fluid rounded" title="Weather App">
     </div>
-    <div class="col-4">
-      <br />
-      <h4 class="h4-projects">Weather application</h4>
+    <div class="project-text-work col-4">
+      <h4 class="h4-projects work">Weather application</h4>
       <p class="projects-description-work">A weather tool to know what's the weather gonna be. It's made using HTML, CSS, Bootstrap, Javascript and API.</p>
+      <a class="contact-link-home work" href="https://silly-galileo-d0e078.netlify.app/" target="_blank">Go !</a>
     </div>
   </div>
+  </div>
+  <br />
+  <h3 class="h3-headers-home" id="contact">Contacts</h3>
+  <div class="line-under-headers">________________________________________________________________________</div>
+  <div class="wrapper-contact">
+    <div class="each-contact one">
+    <img src="/medias/linkedin-logo.png" alt="linkedin logo" class="logos-contact img-fluid" title="LinkedIn">
+    <br>LinkedIn</div>
+    <div class="each-contact">
+    <img src="/medias/email-logo.png" alt="email logo" class="logos-contact img-fluid" title="Email">
+    <br>
+    <a href="mailto:marion.gerard.mail@gmail.com" title="Email to reach me">marion.gerard.mail@gmail.com</a>
+    </div>
   </div>
 </body>
 </html>
