minor changes and SEO

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  <title>Marion Gérard - About & contact</title>
+  <title>Marion Gérard - About Me</title>
 </head>
 <body>
   <nav class="navbar sticky-top navbar-expand-md navbar-light">
@@ -39,12 +39,14 @@
   <div class="line-under-headers">________________________________________________________________________</div>
   <p class="paragraph-about-me">My name is Marion. I am a front-end developer from France that loves traveling and coding. I started learning to code with SheCodes back in October 2021 and fell in love with it. I also have a bachelor in Languages and Business and I speak French, English and Spanish.</p>
   <br />
-  <h3 class="h3-headers-home" id="contact">Contacts</h3>
+  <h3 class="h3-headers-home" id="contact">Reach out to me!</h3>
   <div class="line-under-headers">________________________________________________________________________</div>
   <div class="wrapper-contact">
     <div class="each-contact one">
     <img src="/medias/linkedin-logo.png" alt="linkedin logo" class="logos-contact img-fluid" title="LinkedIn">
-    <br>LinkedIn</div>
+    <br>
+    <a href="https://www.linkedin.com/in/marion-g%C3%A9rard-568078196" title="See my profile">LinkedIn</a>
+    </div>
     <div class="each-contact">
     <img src="/medias/email-logo.png" alt="email logo" class="logos-contact img-fluid" title="Email">
     <br>
