--- a/index.html
+++ b/index.html
@@ -40,17 +40,17 @@
   <div class="container mt-4">
     <div class="row justify-content-center">
       <div class="project-one col-5 text-center">
-        <img src="/medias/cat project.png" alt="cat project" class="images-projects-home img-fluid rounded" title="Cat Project">
+        <img src="/medias/cat project.png" alt="cat project" class="images-projects-home img-fluid rounded" title="Cat project">
         <h4 class="h4-projects"><a href="https://frosty-northcutt-7689db.netlify.app/" target="_blank" title="See this project">Cats page</a></h4>
         <p class="projects-description-home">
           My very first project, a page about cats.
         </p>
       </div>
       <div class="project-two col-5 text-center">
-        <img src="/medias/weather project.png" alt="weather project" class="images-projects-home img-fluid rounded" title="Weather App">
+        <img src="/medias/weather project.png" alt="weather project" class="images-projects-home img-fluid rounded" title="Weather project">
         <h4 class="h4-projects"><a href="https://silly-galileo-d0e078.netlify.app/" target="_blank" title="See this project">Weather app</a></h4>
         <p class="projects-description-home">
-          A page to know the weather wherever you are in the world.
+          Know the weather forecast wherever you are in the world.
         </p>
       </div>
     </div>
@@ -74,16 +74,18 @@
   </div>
   <br />
   <br />
-  <h3 class="h3-headers-home" id="contact">How to contact me</h3>
+  <h3 class="h3-headers-home" id="contact">Reach out to me!</h3>
   <div class="line-under-headers">________________________________________________________________________</div>
   <div class="wrapper-contact">
     <div class="each-contact one">
     <img src="/medias/linkedin-logo.png" alt="linkedin logo" class="logos-contact img-fluid" title="LinkedIn">
-    <br>LinkedIn</div>
+    <br>
+    <a href="https://www.linkedin.com/in/marion-g%C3%A9rard-568078196" title="See my profile">LinkedIn</a>
+    </div>
     <div class="each-contact">
     <img src="/medias/email-logo.png" alt="email logo" class="logos-contact img-fluid" title="Email">
     <br>
-    <a href="mailto:marion.gerard.mail@gmail.com" title="Email to reach me">marion.gerard.mail@gmail.com</a>
+    <a href="mailto:marion.gerard.mail@gmail.com" title="Write me a message">marion.gerard.mail@gmail.com</a>
     </div>
   </div>
 </body>
