fixed email title

--- a/work.html
+++ b/work.html
@@ -72,7 +72,7 @@
     <div class="each-contact">
     <img src="/medias/email-logo.png" alt="email logo" class="logos-contact img-fluid" title="Email">
     <br>
-    <a href="mailto:marion.gerard.mail@gmail.com" title="Email to reach me">marion.gerard.mail@gmail.com</a>
+    <a href="mailto:marion.gerard.mail@gmail.com" title="Write me a message">marion.gerard.mail@gmail.com</a>
     </div>
   </div>
 </body>
