Cleaned the code

--- a/about.html
+++ b/about.html
@@ -21,37 +21,74 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link" href="/index.html" title="Homepage">Home</a>
-          <a class="nav-link" href="/work.html" title="See my work">My work</a>
-          <a class="nav-link active" aria-current="page" href="/about.html" title="Know more about me">About Me</a>
-          <a class="nav-link" href="/about.html#contact" title="Reach out to me">Contact Me</a>
+          <a class="nav-link" href="/index.html" title="Homepage">
+            Home
+          </a>
+          <a class="nav-link" href="/work.html" title="See my work">
+            My work
+          </a>
+          <a class="nav-link active" aria-current="page" href="/about.html" title="Know more about me">
+            About Me
+          </a>
+          <a class="nav-link" href="/about.html#contact" title="Reach out to me">
+            Contact Me
+          </a>
         </div>
       </div>
     </div>
   </nav>
   <div class="header-home">
-    <h1 class="h1-home">About Me</h1>
-    <h2 class="h2-home">Learn to know me better</h2>
-    <a class="contact-link-home" href="/about.html#contact" title="Contact Me">Contact Me</a>
+    <h1 class="h1-home">
+      About Me
+    </h1>
+    <h2 class="h2-home">
+      Learn to know me better
+    </h2>
+    <a class="contact-link-home" href="/about.html#contact" title="Contact Me">
+      Contact Me
+    </a>
   </div>
   <br />
-  <h3 class="h3-headers-home">Who is she ?</h3>
-  <div class="line-under-headers">________________________________________________________________________</div>
-  <p class="paragraph-about-me">My name is Marion. I am a front-end developer from France that loves traveling and coding. I started learning to code with SheCodes back in October 2021 and fell in love with it. I also have a bachelor in Languages and Business and I speak French, English and Spanish.</p>
+  <h3 class="h3-headers-home">
+    Who is she ?
+  </h3>
+  <div class="line-under-headers">
+    ________________________________________________________________________
+  </div>
+  <p class="paragraph-about-me">
+    My name is Marion. I am a front-end developer from France that loves traveling and coding.
+    I started learning to code with SheCodes back in October 2021 and fell in love with it.
+    I also have a bachelor in Languages and Business and I speak French, English and Spanish.
+  </p>
   <br />
-  <h3 class="h3-headers-home" id="contact">Reach out to me!</h3>
-  <div class="line-under-headers">________________________________________________________________________</div>
+  <h3 class="h3-headers-home" id="contact">
+    Reach out to me!
+  </h3>
+  <div class="line-under-headers">
+    ________________________________________________________________________
+  </div>
   <div class="wrapper-contact">
     <div class="each-contact one">
     <img src="/medias/linkedin-logo.png" alt="linkedin logo" class="logos-contact img-fluid" title="LinkedIn">
     <br>
-    <a href="https://www.linkedin.com/in/marion-g%C3%A9rard-568078196" title="See my profile">LinkedIn</a>
+    <a href="https://www.linkedin.com/in/marion-g%C3%A9rard-568078196" title="See my profile">
+      LinkedIn
+    </a>
     </div>
     <div class="each-contact">
     <img src="/medias/email-logo.png" alt="email logo" class="logos-contact img-fluid" title="Email">
     <br>
-    <a href="mailto:marion.gerard.mail@gmail.com" title="Write me a message">marion.gerard.mail@gmail.com</a>
+    <a href="mailto:marion.gerard.mail@gmail.com" title="Write me a message">
+      marion.gerard.mail@gmail.com
+    </a>
     </div>
+  </div>
+  <div class="github">
+    Website coded by Marion Gérard and 
+    <a href="https://github.com/Benuttym/Portfolio" target="_blank" title="See the code">
+      open-sourced
+    </a>
+    .
   </div>
 </body>
 </html>
