--- a/index.html
+++ b/index.html
@@ -21,34 +21,60 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" href="/index.html" title="Homepage">Home</a>
-          <a class="nav-link" href="/work.html" title="See my work">My work</a>
-          <a class="nav-link" href="/about.html" title="Know more about me">About Me</a>
-          <a class="nav-link" href="/index.html#contact" title="Reach out to me">Contact Me</a>
+          <a class="nav-link active" aria-current="page" href="/index.html" title="Homepage">
+            Home
+          </a>
+          <a class="nav-link" href="/work.html" title="See my work">
+            My work
+          </a>
+          <a class="nav-link" href="/about.html" title="Know more about me">
+            About Me
+          </a>
+          <a class="nav-link" href="/index.html#contact" title="Reach out to me">
+            Contact Me
+          </a>
         </div>
       </div>
     </div>
   </nav>
   <div class="header-home">
-  <h1 class="h1-home">Marion Gérard</h1>
-  <h2 class="h2-home">Front-end developer based in Europe</h2>
-  <a class="contact-link-home" href="/index.html#contact" title="Contact Me">Contact Me</a>
+  <h1 class="h1-home">
+    Marion Gérard
+  </h1>
+  <h2 class="h2-home">
+    Front-end developer based in Europe
+  </h2>
+  <a class="contact-link-home" href="/index.html#contact" title="Contact Me">
+    Contact Me
+  </a>
   </div>
   <br />
-  <h3 class="h3-headers-home">Projects</h3>
-  <div class="line-under-headers">________________________________________________________________________</div>
+  <h3 class="h3-headers-home">
+    Projects
+  </h3>
+  <div class="line-under-headers">
+    ________________________________________________________________________
+  </div>
   <div class="container mt-4">
     <div class="row justify-content-center">
       <div class="project-one col-5 text-center">
         <img src="/medias/cat project.png" alt="cat project" class="images-projects-home img-fluid rounded" title="Cat project">
-        <h4 class="h4-projects"><a href="https://frosty-northcutt-7689db.netlify.app/" target="_blank" title="See this project">Cats page</a></h4>
+        <h4 class="h4-projects">
+          <a href="https://frosty-northcutt-7689db.netlify.app/" target="_blank" title="See this project">
+            Cats page
+          </a>
+        </h4>
         <p class="projects-description-home">
           My very first project, a page about cats.
         </p>
       </div>
       <div class="project-two col-5 text-center">
         <img src="/medias/weather project.png" alt="weather project" class="images-projects-home img-fluid rounded" title="Weather project">
-        <h4 class="h4-projects"><a href="https://silly-galileo-d0e078.netlify.app/" target="_blank" title="See this project">Weather app</a></h4>
+        <h4 class="h4-projects">
+          <a href="https://silly-galileo-d0e078.netlify.app/" target="_blank" title="See this project">
+          Weather app
+          </a>
+        </h4>
         <p class="projects-description-home">
           Know the weather forecast wherever you are in the world.
         </p>
@@ -56,37 +82,74 @@
     </div>
   </div>
   <br />
-  <h3 class="h3-headers-home">Skills</h3>
-  <div class="line-under-headers">________________________________________________________________________</div>
+  <h3 class="h3-headers-home">
+    Skills
+  </h3>
+  <div class="line-under-headers">
+    ________________________________________________________________________
+  </div>
   <div class="wrapper-skills">
-    <div class="wrapper-logos"><img src="/medias/html-icon.png" alt="html icon" class="logos-skills img-fluid" title="HTML">
-      <br>HTML</div>
-    <div class="wrapper-logos"><img src="/medias/css-icon.png" alt="css icon" class="logos-skills img-fluid" title="CSS">
-      <br>CSS</div>
-    <div class="wrapper-logos"><img src="/medias/js-icon.png" alt="js icon" class="logos-skills img-fluid" title="Javascript">
-      <br>Javascript</div>
-    <div class="wrapper-logos"><img src="/medias/api-icon.png" alt="api icon" class="logos-skills img-fluid" title="API">
-      <br>API</div>
-    <div class="wrapper-logos"><img src="/medias/github-icon.png" alt="github icon" class="logos-skills img-fluid" title="GitHub">
-      <br>GitHub</div>
-    <div class="wrapper-logos"><img src="/medias/bootstrap-icon.png" alt="bootstrap icon" class="logos-skills img-fluid" title="Bootstrap">
-    <br>Bootstrap</div>
+    <div class="wrapper-logos">
+      <img src="/medias/html-icon.png" alt="html icon" class="logos-skills img-fluid" title="HTML">
+      <br>
+      HTML
+    </div>
+    <div class="wrapper-logos">
+      <img src="/medias/css-icon.png" alt="css icon" class="logos-skills img-fluid" title="CSS">
+      <br>
+      CSS
+    </div>
+    <div class="wrapper-logos">
+      <img src="/medias/js-icon.png" alt="js icon" class="logos-skills img-fluid" title="Javascript">
+      <br>
+      Javascript
+    </div>
+    <div class="wrapper-logos">
+      <img src="/medias/api-icon.png" alt="api icon" class="logos-skills img-fluid" title="API">
+      <br>
+      API
+    </div>
+    <div class="wrapper-logos">
+      <img src="/medias/github-icon.png" alt="github icon" class="logos-skills img-fluid" title="GitHub">
+      <br>
+      GitHub
+    </div>
+    <div class="wrapper-logos">
+      <img src="/medias/bootstrap-icon.png" alt="bootstrap icon" class="logos-skills img-fluid" title="Bootstrap">
+      <br>
+      Bootstrap
+    </div>
   </div>
   <br />
   <br />
-  <h3 class="h3-headers-home" id="contact">Reach out to me!</h3>
-  <div class="line-under-headers">________________________________________________________________________</div>
+  <h3 class="h3-headers-home" id="contact">
+    Reach out to me!
+  </h3>
+  <div class="line-under-headers">
+    ________________________________________________________________________
+  </div>
   <div class="wrapper-contact">
     <div class="each-contact one">
     <img src="/medias/linkedin-logo.png" alt="linkedin logo" class="logos-contact img-fluid" title="LinkedIn">
     <br>
-    <a href="https://www.linkedin.com/in/marion-g%C3%A9rard-568078196" title="See my profile">LinkedIn</a>
+    <a href="https://www.linkedin.com/in/marion-g%C3%A9rard-568078196" title="See my profile">
+      LinkedIn
+    </a>
     </div>
     <div class="each-contact">
     <img src="/medias/email-logo.png" alt="email logo" class="logos-contact img-fluid" title="Email">
     <br>
-    <a href="mailto:marion.gerard.mail@gmail.com" title="Write me a message">marion.gerard.mail@gmail.com</a>
+    <a href="mailto:marion.gerard.mail@gmail.com" title="Write me a message">
+      marion.gerard.mail@gmail.com
+    </a>
     </div>
+  </div>
+  <div class="github">
+    Website coded by Marion Gérard and 
+    <a href="https://github.com/Benuttym/Portfolio" target="_blank" title="See the code">
+      open-sourced
+    </a>
+    .
   </div>
 </body>
 </html>
