--- a/work.html
+++ b/work.html
@@ -21,31 +21,55 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link" href="/index.html" title="Homepage">Home</a>
-          <a class="nav-link active" aria-current="page" href="/work.html" title="See my work">My work</a>
-          <a class="nav-link" href="/about.html" title="Know more about me">About Me</a>
-          <a class="nav-link" href="/work.html#contact" title="Reach out to me">Contact Me</a>
+          <a class="nav-link" href="/index.html" title="Homepage">
+            Home
+          </a>
+          <a class="nav-link active" aria-current="page" href="/work.html" title="See my work">
+            My work
+          </a>
+          <a class="nav-link" href="/about.html" title="Know more about me">
+            About Me
+          </a>
+          <a class="nav-link" href="/work.html#contact" title="Reach out to me">
+            Contact Me
+          </a>
         </div>
       </div>
     </div>
   </nav>
   <div class="header-home">
-    <h1 class="h1-home">My Work</h1>
-    <h2 class="h2-home">See what I have been up to</h2>
-    <a class="contact-link-home" href="/work.html#contact" title="Contact Me">Contact Me</a>
+    <h1 class="h1-home">
+      My Work
+    </h1>
+    <h2 class="h2-home">
+      See what I have been up to
+    </h2>
+    <a class="contact-link-home" href="/work.html#contact" title="Contact Me">
+      Contact Me
+    </a>
   </div>
   <br />
-  <h3 class="h3-headers-home">Projects</h3>
-  <div class="line-under-headers">________________________________________________________________________</div>
+  <h3 class="h3-headers-home">
+    Projects
+  </h3>
+  <div class="line-under-headers">
+    ________________________________________________________________________
+  </div>
   <div class="container mt-4">
   <div class="row justify-content-center">
     <div class="project-image-work col-6">
       <img src="/medias/cat project.png" alt="cat project" class="img-fluid rounded" title="Cat project">
     </div>
     <div class="project-text-work col-4">
-      <h4 class="h4-projects work">Cat page</h4>
-      <p class="projects-description-work">A page about cats made with HTML and CSS. It was my very first project as a front-end developer.</p>
-      <a class="contact-link-home work" href="https://frosty-northcutt-7689db.netlify.app/" target="_blank" title="Learn about cats!">Go !</a>
+      <h4 class="h4-projects work">
+        Cat page
+      </h4>
+      <p class="projects-description-work">
+        A page about cats made with HTML and CSS. It was my very first project as a front-end developer.
+      </p>
+      <a class="contact-link-home work" href="https://frosty-northcutt-7689db.netlify.app/" target="_blank" title="Learn about cats!">
+        Go !
+      </a>
     </div>
   </div>
   <br />
@@ -54,26 +78,47 @@
       <img src="/medias/weather project.png" alt="weather project" class="img-fluid rounded" title="Weather project">
     </div>
     <div class="project-text-work col-4">
-      <h4 class="h4-projects work">Weather application</h4>
-      <p class="projects-description-work">A weather tool to know what's the weather gonna be. It's made using HTML, CSS, Bootstrap, Javascript and API.</p>
-      <a class="contact-link-home work" href="https://silly-galileo-d0e078.netlify.app/" target="_blank" title="See the weather forecast">Go !</a>
+      <h4 class="h4-projects work">
+        Weather application
+      </h4>
+      <p class="projects-description-work">
+        A weather tool to know what's the weather gonna be. It's made using HTML, CSS, Bootstrap, Javascript and API.
+      </p>
+      <a class="contact-link-home work" href="https://silly-galileo-d0e078.netlify.app/" target="_blank" title="See the weather forecast">
+        Go !
+      </a>
     </div>
   </div>
   </div>
   <br />
-  <h3 class="h3-headers-home" id="contact">Reach out to me!</h3>
-  <div class="line-under-headers">________________________________________________________________________</div>
+  <h3 class="h3-headers-home" id="contact">
+    Reach out to me!
+  </h3>
+  <div class="line-under-headers">
+    ________________________________________________________________________
+  </div>
   <div class="wrapper-contact">
     <div class="each-contact one">
     <img src="/medias/linkedin-logo.png" alt="linkedin logo" class="logos-contact img-fluid" title="LinkedIn">
     <br>
-    <a href="https://www.linkedin.com/in/marion-g%C3%A9rard-568078196" title="See my profile">LinkedIn</a>
+    <a href="https://www.linkedin.com/in/marion-g%C3%A9rard-568078196" title="See my profile">
+      LinkedIn
+    </a>
     </div>
     <div class="each-contact">
     <img src="/medias/email-logo.png" alt="email logo" class="logos-contact img-fluid" title="Email">
     <br>
-    <a href="mailto:marion.gerard.mail@gmail.com" title="Write me a message">marion.gerard.mail@gmail.com</a>
+    <a href="mailto:marion.gerard.mail@gmail.com" title="Write me a message">
+      marion.gerard.mail@gmail.com
+    </a>
     </div>
+  </div>
+  <div class="github">
+    Website coded by Marion Gérard and 
+    <a href="https://github.com/Benuttym/Portfolio" target="_blank" title="See the code">
+      open-sourced
+    </a>
+    .
   </div>
 </body>
 </html>
