--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <title>Marion Gérard - Front-end developer</title>
+    <title>Marion Gérard - Rapport de Stage</title>
   </head>
   <body>
   <nav class="navbar sticky-top navbar-expand-md navbar-light">
@@ -42,7 +42,7 @@
     Marion Gérard
   </h1>
   <h2 class="h2-home">
-    Front-end developer based in Europe
+    Rapport de Stage
   </h2>
   <a class="contact-link-home" href="/index.html#contact" title="Contact Me">
     Contact Me
