--- a/index.html
+++ b/index.html
@@ -50,45 +50,51 @@
   </div>
   <br />
   <h3 class="h3-headers-home">
-    Projects
+    Qui suis-je ?
   </h3>
   <div class="line-under-headers">
     ________________________________________________________________________
   </div>
-  <div class="container mt-4">
-    <div class="row justify-content-center">
-      <div class="project-one col-5 text-center">
-        <img src="/medias/cat project.png" alt="cat project" class="images-projects-home img-fluid rounded" title="Cat project">
-        <h4 class="h4-projects">
-          <a href="https://frosty-northcutt-7689db.netlify.app/" target="_blank" title="See this project">
-            Cats page
-          </a>
-        </h4>
-        <p class="projects-description-home">
-          My very first project, a page about cats.
-        </p>
-      </div>
-      <div class="project-two col-5 text-center">
-        <img src="/medias/weather project.png" alt="weather project" class="images-projects-home img-fluid rounded" title="Weather project">
-        <h4 class="h4-projects">
-          <a href="https://silly-galileo-d0e078.netlify.app/" target="_blank" title="See this project">
-          Weather app
-          </a>
-        </h4>
-        <p class="projects-description-home">
-          Know the weather forecast wherever you are in the world.
-        </p>
-      </div>
-    </div>
-  </div>
-  <br />
-  <h3 class="h3-headers-home">
-    Skills
-  </h3>
-  <div class="line-under-headers">
-    ________________________________________________________________________
-  </div>
+  <p class="paragraph-about-me">
+    My name is Marion. I am a front-end developer from France that loves traveling and coding.
+    I started learning to code with SheCodes back in October 2021 and fell in love with it.
+    I also have a bachelor in Languages and Business and I speak French, English and Spanish.
+  </p>
   <div class="wrapper-skills">
+    <p class="paragraph-about-me">
+      Les logiciels que je maitrise :
+    </p>
+    <div class="wrapper-logos">
+      <img src="/medias/html-icon.png" alt="html icon" class="logos-skills img-fluid" title="HTML">
+      <br>
+      Photoshop
+    </div>
+    <div class="wrapper-logos">
+      <img src="/medias/css-icon.png" alt="css icon" class="logos-skills img-fluid" title="CSS">
+      <br>
+      Illustrator
+    </div>
+    <div class="wrapper-logos">
+      <img src="/medias/js-icon.png" alt="js icon" class="logos-skills img-fluid" title="Javascript">
+      <br>
+      Premiere Pro
+    </div>
+    <div class="wrapper-logos">
+      <img src="/medias/api-icon.png" alt="api icon" class="logos-skills img-fluid" title="API">
+      <br>
+      Figma
+    </div>
+    <div class="wrapper-logos">
+      <img src="/medias/github-icon.png" alt="github icon" class="logos-skills img-fluid" title="GitHub">
+      <br>
+      WordPress
+    </div>
+    <div class="wrapper-logos">
+      <img src="/medias/bootstrap-icon.png" alt="bootstrap icon" class="logos-skills img-fluid" title="Bootstrap">
+      <br>
+      Bootstrap
+    </div>
+  </br>
     <div class="wrapper-logos">
       <img src="/medias/html-icon.png" alt="html icon" class="logos-skills img-fluid" title="HTML">
       <br>
@@ -120,10 +126,26 @@
       Bootstrap
     </div>
   </div>
+
+  <br />
+
+  <h3 class="h3-headers-home">
+    Brève présentation du stage
+  </h3>
+  <div class="line-under-headers">
+    ________________________________________________________________________
+  </div>
+  <p class="paragraph-about-me">
+    My name is Marion. I am a front-end developer from France that loves traveling and coding.
+    I started learning to code with SheCodes back in October 2021 and fell in love with it.
+    I also have a bachelor in Languages and Business and I speak French, English and Spanish.
+  </p>
+
   <br />
   <br />
+
   <h3 class="h3-headers-home" id="contact">
-    Reach out to me!
+    Remerciements
   </h3>
   <div class="line-under-headers">
     ________________________________________________________________________
@@ -144,12 +166,9 @@
     </a>
     </div>
   </div>
+
   <div class="github">
-    Website coded by Marion Gérard and 
-    <a href="https://github.com/Benuttym/Portfolio" target="_blank" title="See the code">
-      open-sourced
-    </a>
-    .
+    Site codé par Marion Gérard
   </div>
 </body>
 </html>
