--- a/work.html
+++ b/work.html
@@ -39,13 +39,13 @@
   </nav>
   <div class="header-home">
     <h1 class="h1-home">
-      My Work
+      Mon Stage
     </h1>
     <h2 class="h2-home">
-      See what I have been up to
+      A compléter
     </h2>
-    <a class="contact-link-home" href="/work.html#contact" title="Contact Me">
-      Contact Me
+    <a class="contact-link-home" href="/contact.html" title="Me contacter">
+      Me contacter
     </a>
   </div>
   <br />
