--- a/contact.html
+++ b/contact.html
@@ -39,13 +39,13 @@
   </nav>
   <div class="header-home">
     <h1 class="h1-home">
-      About Me
+      Me contacter
     </h1>
     <h2 class="h2-home">
-      Learn to know me better
+      A compléter
     </h2>
-    <a class="contact-link-home" href="/about.html#contact" title="Contact Me">
-      Contact Me
+    <a class="contact-link-home" href="/contact.html" title="Me contacter">
+      Me contacter
     </a>
   </div>
   <br />
