--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
     ________________________________________________________________________
   </div>
   <p class="paragraph-about-me">
-    My name is Marion. I am a front-end developer from France that loves traveling and coding.
-    I started learning to code with SheCodes back in October 2021 and fell in love with it.
-    I also have a bachelor in Languages and Business and I speak French, English and Spanish.
+    Je m’appelle Marion, j’ai 26 ans. Avant d’entrer à l’ESD, j’ai fait une licence en Langues Etrangères Appliquées où j’ai découvert la communication. C’est un domaine que j’ai beaucoup aimé et je souhaitais continuer dans cette voie.
+    Après l’obtention de ma licence et deux ans de mûre réflexion, j’ai décidé de rejoindre l’ESD Paris pour me spécialiser dans le digital et l’aspect créatif tout en faisant de la communication par le biais de mon stage et de ma future alternance.
+    Aujourd’hui, je rentre en mastère de Digital Design à l’ESD avec une alternance en communication digitale chez Veolia.
   </p>
   <div class="wrapper-skills">
     <p class="paragraph-about-me">
@@ -67,7 +67,7 @@
     <div class="wrapper-logos">
       <img src="/medias/html-icon.png" alt="html icon" class="logos-skills img-fluid" title="HTML">
       <br>
-      Photoshop
+      Premiere Pro
     </div>
     <div class="wrapper-logos">
       <img src="/medias/css-icon.png" alt="css icon" class="logos-skills img-fluid" title="CSS">
@@ -77,24 +77,29 @@
     <div class="wrapper-logos">
       <img src="/medias/js-icon.png" alt="js icon" class="logos-skills img-fluid" title="Javascript">
       <br>
-      Premiere Pro
+      Photoshop
     </div>
     <div class="wrapper-logos">
       <img src="/medias/api-icon.png" alt="api icon" class="logos-skills img-fluid" title="API">
       <br>
-      Figma
+      After Effects
     </div>
     <div class="wrapper-logos">
       <img src="/medias/github-icon.png" alt="github icon" class="logos-skills img-fluid" title="GitHub">
       <br>
-      WordPress
+      Figma
     </div>
     <div class="wrapper-logos">
       <img src="/medias/bootstrap-icon.png" alt="bootstrap icon" class="logos-skills img-fluid" title="Bootstrap">
       <br>
-      Bootstrap
+      Canva
     </div>
   </br>
+    <div class="wrapper-logos">
+      <img src="/medias/github-icon.png" alt="github icon" class="logos-skills img-fluid" title="GitHub">
+      <br>
+      Wordpress
+    </div>
     <div class="wrapper-logos">
       <img src="/medias/html-icon.png" alt="html icon" class="logos-skills img-fluid" title="HTML">
       <br>
@@ -113,17 +118,12 @@
     <div class="wrapper-logos">
       <img src="/medias/api-icon.png" alt="api icon" class="logos-skills img-fluid" title="API">
       <br>
-      API
-    </div>
-    <div class="wrapper-logos">
-      <img src="/medias/github-icon.png" alt="github icon" class="logos-skills img-fluid" title="GitHub">
-      <br>
-      GitHub
+      Bootstrap
     </div>
     <div class="wrapper-logos">
       <img src="/medias/bootstrap-icon.png" alt="bootstrap icon" class="logos-skills img-fluid" title="Bootstrap">
       <br>
-      Bootstrap
+      Pack Office
     </div>
   </div>
 
@@ -136,13 +136,21 @@
     ________________________________________________________________________
   </div>
   <p class="paragraph-about-me">
-    My name is Marion. I am a front-end developer from France that loves traveling and coding.
-    I started learning to code with SheCodes back in October 2021 and fell in love with it.
-    I also have a bachelor in Languages and Business and I speak French, English and Spanish.
+    J’ai réalisé mon stage au sein du département de Communication chez ChooseMyCompany, 
+    situé au 35 rue Beaubourg (75003) à Paris, en tant que stagiaire Communication et 
+    Digital du 20 mars 2023 au 20 septembre 2023.
+  </br>
+  </br>
+    Mes différentes missions ont été :</br>
+    - Réalisation de montage vidéo</br>
+    - Tournage de vidéos et d’émissions</br>
+    - Gestion de commandes de goodies et de trophées</br>
+    - Aide à la Directrice Artistique</br>
+    - Participation à l'organisation d’un événement au Musée du quai Branly</br>
+    - Gestion des réseaux sociaux (LinkedIn et Instagram)</br>
+    - Préparation d’interviews</br>
+    - Accompagnement d’invités lors des tournages</br>
   </p>
-
-  <br />
-  <br />
 
   <h3 class="h3-headers-home" id="contact">
     Remerciements
@@ -150,23 +158,17 @@
   <div class="line-under-headers">
     ________________________________________________________________________
   </div>
-  <div class="wrapper-contact">
-    <div class="each-contact one">
-    <img src="/medias/linkedin-logo.png" alt="linkedin logo" class="logos-contact img-fluid" title="LinkedIn">
-    <br>
-    <a href="https://www.linkedin.com/in/marion-g%C3%A9rard-568078196" title="See my profile">
-      LinkedIn
-    </a>
-    </div>
-    <div class="each-contact">
-    <img src="/medias/email-logo.png" alt="email logo" class="logos-contact img-fluid" title="Email">
-    <br>
-    <a href="mailto:marion.gerard.mail@gmail.com" title="Write me a message">
-      marion.gerard.mail@gmail.com
-    </a>
-    </div>
-  </div>
-
+  <p class="paragraph-about-me">
+    Je souhaite remercier ma tutrice de stage, Anne-Sophie Favrichon, 
+    qui a su être bienveillante et à l’écoute. Je souhaite également remercier 
+    Marine Deschamps pour son accompagnement lors de la recherche et lors de la 
+    réalisation du contrat. Je remercie mes collègues qui m’ont donné envie de venir 
+    au travail chaque jour avec leur joie de vivre. Je remercie Adèle Saulière, 
+    l’autre stagiaire de la communication, pour son aide et son amitié. Enfin, je 
+    remercie l’École Supérieure du Digital.
+  </p>
+  </br>
+  </br>
   <div class="github">
     Site codé par Marion Gérard
   </div>
