--- a/work.html
+++ b/work.html
@@ -49,6 +49,7 @@
     </a>
   </div>
   <br />
+
   <h3 class="h3-headers-home">
     Projects
   </h3>
@@ -90,7 +91,9 @@
     </div>
   </div>
   </div>
+
   <br />
+
   <h3 class="h3-headers-home" id="contact">
     Reach out to me!
   </h3>
@@ -113,12 +116,9 @@
     </a>
     </div>
   </div>
+
   <div class="github">
-    Website coded by Marion Gérard and 
-    <a href="https://github.com/Benuttym/Portfolio" target="_blank" title="See the code">
-      open-sourced
-    </a>
-    .
+    Site codé par Marion Gérard.
   </div>
 </body>
 </html>
