--- a/about.html
+++ b/about.html
@@ -37,6 +37,7 @@
       </div>
     </div>
   </nav>
+
   <div class="header-home">
     <h1 class="h1-home">
       ChooseMyCompany
@@ -48,47 +49,31 @@
       Me contacter
     </a>
   </div>
+
   <br />
+  
   <h3 class="h3-headers-home">
-    Who is she ?
+    Présentation de l'entreprise
   </h3>
   <div class="line-under-headers">
     ________________________________________________________________________
   </div>
   <p class="paragraph-about-me">
-    My name is Marion. I am a front-end developer from France that loves traveling and coding.
-    I started learning to code with SheCodes back in October 2021 and fell in love with it.
-    I also have a bachelor in Languages and Business and I speak French, English and Spanish.
+    Positionnement</br>
+    Marché</br>
+    Structure</br>
+    Stratégie</br>
+    SWOT</br>
+    Offre</br>
+    Enjeux</br>
+    Valeurs</br>
   </p>
+
   <br />
-  <h3 class="h3-headers-home" id="contact">
-    Reach out to me!
-  </h3>
-  <div class="line-under-headers">
-    ________________________________________________________________________
-  </div>
-  <div class="wrapper-contact">
-    <div class="each-contact one">
-    <img src="/medias/linkedin-logo.png" alt="linkedin logo" class="logos-contact img-fluid" title="LinkedIn">
-    <br>
-    <a href="https://www.linkedin.com/in/marion-g%C3%A9rard-568078196" title="See my profile">
-      LinkedIn
-    </a>
-    </div>
-    <div class="each-contact">
-    <img src="/medias/email-logo.png" alt="email logo" class="logos-contact img-fluid" title="Email">
-    <br>
-    <a href="mailto:marion.gerard.mail@gmail.com" title="Write me a message">
-      marion.gerard.mail@gmail.com
-    </a>
-    </div>
-  </div>
+  <br />
+
   <div class="github">
-    Website coded by Marion Gérard and 
-    <a href="https://github.com/Benuttym/Portfolio" target="_blank" title="See the code">
-      open-sourced
-    </a>
-    .
+    Site codé par Marion Gérard.
   </div>
 </body>
 </html>
