--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,7 @@
       </div>
     </div>
   </nav>
+
   <div class="header-home">
     <h1 class="h1-home">
       Me contacter
@@ -44,25 +45,12 @@
     <h2 class="h2-home">
       A compléter
     </h2>
-    <a class="contact-link-home" href="/contact.html" title="Me contacter">
-      Me contacter
-    </a>
   </div>
+  
   <br />
-  <h3 class="h3-headers-home">
-    Who is she ?
-  </h3>
-  <div class="line-under-headers">
-    ________________________________________________________________________
-  </div>
-  <p class="paragraph-about-me">
-    My name is Marion. I am a front-end developer from France that loves traveling and coding.
-    I started learning to code with SheCodes back in October 2021 and fell in love with it.
-    I also have a bachelor in Languages and Business and I speak French, English and Spanish.
-  </p>
-  <br />
+
   <h3 class="h3-headers-home" id="contact">
-    Reach out to me!
+    Me contacter
   </h3>
   <div class="line-under-headers">
     ________________________________________________________________________
@@ -84,11 +72,7 @@
     </div>
   </div>
   <div class="github">
-    Website coded by Marion Gérard and 
-    <a href="https://github.com/Benuttym/Portfolio" target="_blank" title="See the code">
-      open-sourced
-    </a>
-    .
+    Site codé par Marion Gérard.
   </div>
 </body>
 </html>
