--- a/work.html
+++ b/work.html
@@ -37,6 +37,7 @@
       </div>
     </div>
   </nav>
+
   <div class="header-home">
     <h1 class="h1-home">
       Mon Stage
@@ -48,14 +49,20 @@
       Me contacter
     </a>
   </div>
+  
   <br />
 
   <h3 class="h3-headers-home">
-    Projects
+    Présentation de ma mission
   </h3>
   <div class="line-under-headers">
     ________________________________________________________________________
   </div>
+  <p class="paragraph-about-me">
+    Le service et son contexte</br>
+    Détails de vos missions</br>
+    Quelques réalisations concrètes et illustrées</br>
+  </p>
   <div class="container mt-4">
   <div class="row justify-content-center">
     <div class="project-image-work col-6">
@@ -95,28 +102,34 @@
   <br />
 
   <h3 class="h3-headers-home" id="contact">
-    Reach out to me!
+    Bilan et perspectives
   </h3>
   <div class="line-under-headers">
     ________________________________________________________________________
   </div>
-  <div class="wrapper-contact">
-    <div class="each-contact one">
-    <img src="/medias/linkedin-logo.png" alt="linkedin logo" class="logos-contact img-fluid" title="LinkedIn">
-    <br>
-    <a href="https://www.linkedin.com/in/marion-g%C3%A9rard-568078196" title="See my profile">
-      LinkedIn
-    </a>
-    </div>
-    <div class="each-contact">
-    <img src="/medias/email-logo.png" alt="email logo" class="logos-contact img-fluid" title="Email">
-    <br>
-    <a href="mailto:marion.gerard.mail@gmail.com" title="Write me a message">
-      marion.gerard.mail@gmail.com
-    </a>
-    </div>
-  </div>
+  <p class="paragraph-about-me">
+    Mes résultats (avec des données objectives, quanti et quali)</br>
+    Ma plus grande réussite</br>
+    Ma plus grande leçon</br>
+    Les compétences que j'ai acquises</br>
+    Ce que j'ai appris d’un point de vue humain, équipe, management</br>
+    Comment cette expérience va alimenter mon projet professionnel</br>
+  </p>
 
+  <br />
+
+  <h3 class="h3-headers-home" id="contact">
+    Témoignages
+  </h3>
+  <div class="line-under-headers">
+    ________________________________________________________________________
+  </div>
+  <p class="paragraph-about-me">
+    Adèle
+  </p>
+
+</br>
+</br>
   <div class="github">
     Site codé par Marion Gérard.
   </div>
