accueil et stage

--- a/index.html
+++ b/index.html
@@ -49,79 +49,79 @@
 
   <br />
 
-  <h3 class="h3-headers-home">
+  <h3 class="h3-home">
     Qui suis-je ?
   </h3>
-  <div class="line-under-headers">
+  <div class="line-under-h3">
     ________________________________________________________________________
   </div>
-  <p class="paragraph-about-me">
+  <p class="paragraph-home">
     Je m’appelle Marion, j’ai 26 ans. Avant d’entrer à l’ESD, j’ai fait une licence en Langues Etrangères Appliquées où j’ai découvert la communication. C’est un domaine que j’ai beaucoup aimé et je souhaitais continuer dans cette voie.
     Après l’obtention de ma licence et deux ans de mûre réflexion, j’ai décidé de rejoindre l’ESD Paris pour me spécialiser dans le digital et l’aspect créatif tout en faisant de la communication par le biais de mon stage et de ma future alternance.
     Aujourd’hui, je rentre en mastère de Digital Design à l’ESD avec une alternance en communication digitale chez Veolia.
   </p>
-  <div class="wrapper-skills">
+  <div class="wrapper-skills-home">
     <h5 class="h5">
       Les logiciels que je maitrise :
     </h5>
-    <div class="wrapper-logos">
-      <img src="/medias/html-icon.png" alt="html icon" class="logos-skills img-fluid" title="HTML">
+    <div class="wrapper-logos-home">
+      <img src="/medias/html-icon.png" alt="html icon" class="logos-skills-home img-fluid" title="HTML">
       <br>
       Premiere Pro
     </div>
-    <div class="wrapper-logos">
-      <img src="/medias/css-icon.png" alt="css icon" class="logos-skills img-fluid" title="CSS">
+    <div class="wrapper-logos-home">
+      <img src="/medias/css-icon.png" alt="css icon" class="logos-skills-home img-fluid" title="CSS">
       <br>
       Illustrator
     </div>
-    <div class="wrapper-logos">
-      <img src="/medias/js-icon.png" alt="js icon" class="logos-skills img-fluid" title="Javascript">
+    <div class="wrapper-logos-home">
+      <img src="/medias/js-icon.png" alt="js icon" class="logos-skills-home img-fluid" title="Javascript">
       <br>
       Photoshop
     </div>
-    <div class="wrapper-logos">
-      <img src="/medias/api-icon.png" alt="api icon" class="logos-skills img-fluid" title="API">
+    <div class="wrapper-logos-home">
+      <img src="/medias/api-icon.png" alt="api icon" class="logos-skills-home img-fluid" title="API">
       <br>
       After Effects
     </div>
-    <div class="wrapper-logos">
-      <img src="/medias/github-icon.png" alt="github icon" class="logos-skills img-fluid" title="GitHub">
+    <div class="wrapper-logos-home">
+      <img src="/medias/github-icon.png" alt="github icon" class="logos-skills-home img-fluid" title="GitHub">
       <br>
       Figma
     </div>
-    <div class="wrapper-logos">
-      <img src="/medias/bootstrap-icon.png" alt="bootstrap icon" class="logos-skills img-fluid" title="Bootstrap">
+    <div class="wrapper-logos-home">
+      <img src="/medias/bootstrap-icon.png" alt="bootstrap icon" class="logos-skills-home img-fluid" title="Bootstrap">
       <br>
       Canva
     </div>
   </br>
-    <div class="wrapper-logos">
-      <img src="/medias/github-icon.png" alt="github icon" class="logos-skills img-fluid" title="GitHub">
+    <div class="wrapper-logos-home">
+      <img src="/medias/github-icon.png" alt="github icon" class="logos-skills-home img-fluid" title="GitHub">
       <br>
       Wordpress
     </div>
-    <div class="wrapper-logos">
-      <img src="/medias/html-icon.png" alt="html icon" class="logos-skills img-fluid" title="HTML">
+    <div class="wrapper-logos-home">
+      <img src="/medias/html-icon.png" alt="html icon" class="logos-skills-home img-fluid" title="HTML">
       <br>
       HTML
     </div>
-    <div class="wrapper-logos">
-      <img src="/medias/css-icon.png" alt="css icon" class="logos-skills img-fluid" title="CSS">
+    <div class="wrapper-logos-home">
+      <img src="/medias/css-icon.png" alt="css icon" class="logos-skills-home img-fluid" title="CSS">
       <br>
       CSS
     </div>
-    <div class="wrapper-logos">
-      <img src="/medias/js-icon.png" alt="js icon" class="logos-skills img-fluid" title="Javascript">
+    <div class="wrapper-logos-home">
+      <img src="/medias/js-icon.png" alt="js icon" class="logos-skills-home img-fluid" title="Javascript">
       <br>
       Javascript
     </div>
-    <div class="wrapper-logos">
-      <img src="/medias/api-icon.png" alt="api icon" class="logos-skills img-fluid" title="API">
+    <div class="wrapper-logos-home">
+      <img src="/medias/api-icon.png" alt="api icon" class="logos-skills-home img-fluid" title="API">
       <br>
       Bootstrap
     </div>
-    <div class="wrapper-logos">
-      <img src="/medias/bootstrap-icon.png" alt="bootstrap icon" class="logos-skills img-fluid" title="Bootstrap">
+    <div class="wrapper-logos-home">
+      <img src="/medias/bootstrap-icon.png" alt="bootstrap icon" class="logos-skills-home img-fluid" title="Bootstrap">
       <br>
       Pack Office
     </div>
@@ -129,13 +129,13 @@
 
   <br />
 
-  <h3 class="h3-headers-home">
+  <h3 class="h3-home">
     Brève présentation du stage
   </h3>
-  <div class="line-under-headers">
+  <div class="line-under-h3">
     ________________________________________________________________________
   </div>
-  <p class="paragraph-about-me">
+  <p class="paragraph-home">
     J’ai réalisé mon stage au sein du département de Communication chez ChooseMyCompany, 
     situé au 35 rue Beaubourg (75003) à Paris, en tant que stagiaire Communication et 
     Digital du 20 mars 2023 au 20 septembre 2023.
@@ -152,13 +152,13 @@
     - Accompagnement d’invités lors des tournages</br>
   </p>
 
-  <h3 class="h3-headers-home" id="contact">
+  <h3 class="h3-home" id="contact">
     Remerciements
   </h3>
-  <div class="line-under-headers">
+  <div class="line-under-h3">
     ________________________________________________________________________
   </div>
-  <p class="paragraph-about-me">
+  <p class="paragraph-home">
     Je souhaite remercier ma tutrice de stage, Anne-Sophie Favrichon, 
     qui a su être bienveillante et à l’écoute. Je souhaite également remercier 
     Marine Deschamps pour son accompagnement lors de la recherche et lors de la 
@@ -169,7 +169,7 @@
   </p>
   </br>
   </br>
-  <div class="github">
+  <div class="footer">
     Site codé par Marion Gérard
   </div>
 </body>
