--- a/work.html
+++ b/work.html
@@ -38,21 +38,21 @@
     </div>
   </nav>
 
-  <div class="header-home">
-    <h1 class="h1-home">
+  <div class="header-work">
+    <h1 class="h1-work">
       Mon Stage
     </h1>
-    <h2 class="h2-home">
+    <h2 class="h2-work">
       A compléter
     </h2>
   </div>
 
   <br />
 
-  <h3 class="h3-headers-home">
+  <h3 class="h3-work">
     Présentation de ma mission
   </h3>
-  <div class="line-under-headers">
+  <div class="line-under-h3">
     ________________________________________________________________________
   </div>
   <h5 class="h5">
@@ -66,34 +66,34 @@
   </h5>
   <div class="container mt-4">
   <div class="row justify-content-center">
-    <div class="project-image-work col-6">
+    <div class="presentation-realisations col-6">
       <img src="/medias/cat project.png" alt="cat project" class="img-fluid rounded" title="Cat project">
     </div>
-    <div class="project-text-work col-4">
-      <h4 class="h4-projects work">
+    <div class="realisations-single col-4">
+      <h4 class="h4-work">
         Cat page
       </h4>
-      <p class="projects-description-work">
+      <p class="realisation-text">
         A page about cats made with HTML and CSS. It was my very first project as a front-end developer.
       </p>
-      <a class="contact-link-home work" href="https://frosty-northcutt-7689db.netlify.app/" target="_blank" title="Learn about cats!">
+      <a class="realisation-link" href="https://frosty-northcutt-7689db.netlify.app/" target="_blank" title="Learn about cats!">
         Go !
       </a>
     </div>
   </div>
   <br />
   <div class="row justify-content-center">
-    <div class="project-image-work col-6">
+    <div class="presentation-realisation col-6">
       <img src="/medias/weather project.png" alt="weather project" class="img-fluid rounded" title="Weather project">
     </div>
-    <div class="project-text-work col-4">
-      <h4 class="h4-projects work">
+    <div class="realisations-single col-4">
+      <h4 class="h4-work">
         Weather application
       </h4>
-      <p class="projects-description-work">
+      <p class="realisation-text">
         A weather tool to know what's the weather gonna be. It's made using HTML, CSS, Bootstrap, Javascript and API.
       </p>
-      <a class="contact-link-home work" href="https://silly-galileo-d0e078.netlify.app/" target="_blank" title="See the weather forecast">
+      <a class="realisation-link" href="https://silly-galileo-d0e078.netlify.app/" target="_blank" title="See the weather forecast">
         Go !
       </a>
     </div>
@@ -102,13 +102,13 @@
 
   <br />
 
-  <h3 class="h3-headers-home" id="contact">
+  <h3 class="h3-work" id="contact">
     Bilan et perspectives
   </h3>
-  <div class="line-under-headers">
+  <div class="line-under-h3">
     ________________________________________________________________________
   </div>
-  <p class="paragraph-about-me">
+  <p class="paragraph-work">
     Mes résultats (avec des données objectives, quanti et quali)</br>
     Ma plus grande réussite</br>
     Ma plus grande leçon</br>
@@ -119,19 +119,19 @@
 
   <br />
 
-  <h3 class="h3-headers-home" id="contact">
+  <h3 class="h3-work" id="contact">
     Témoignages
   </h3>
-  <div class="line-under-headers">
+  <div class="line-under-h3">
     ________________________________________________________________________
   </div>
-  <p class="paragraph-about-me">
+  <p class="paragraph-work">
     Adèle
   </p>
 
 </br>
 </br>
-  <div class="github">
+  <div class="footer">
     Site codé par Marion Gérard.
   </div>
 </body>
